index.html pour commuanuté et admin pour githubpage

--- a/communaute/index.html
+++ b/communaute/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Communauté</title>
+    <title>OùQAC?</title>
 </head>
 <body>
     <h1>Communauté</h1>
