Panel Admin - Ajout style.css sidebar

--- a/admin/index.html
+++ b/admin/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <div id="tools">
-                <button class="btn-mode">Vue</button>
+                <button class="btn-mode active">Vue</button>
                 <button class="btn-mode">Nœuds</button>
                 <button class="btn-mode">Chemins</button>
             </div>
@@ -35,9 +35,9 @@
             <div id="sidebar-content">
                 <div id="panel-view"></div>
 
-                <div id="panel-node"></div>
+                <div id="panel-node" class="hidden"></div>
 
-                <div id="panel-path"></div>
+                <div id="panel-path" class="hidden"></div>
             </div>
 
             <div id="actions">
