Panel Admin - Ajout recherche salle dans index.html et style.css

--- a/admin/index.html
+++ b/admin/index.html
@@ -33,7 +33,14 @@
             </div>
 
             <div id="sidebar-content">
-                <div id="panel-view"></div>
+                <div id="panel-view">
+                    <input type="text" id="search-room" placeholder="Rechercher une salle...">
+                    <div id="room-list">
+                        <div class="room-item"><b>P1-1020</b> <small>(Salle)</small></div>
+                        <div class="room-item"><b>P1-1030</b> <small>(Salle)</small></div>
+                        <div class="room-item"><b>XXXX</b> <small>(Couloir)</small></div>
+                    </div>
+                </div>
 
                 <div id="panel-node" class="hidden"></div>
 
