--- a/admin/index.html
+++ b/admin/index.html
@@ -64,7 +64,7 @@
                 <div id="panel-path" class="hidden">
                     <h3>Édition Chemin</h3>
                     <p>Sélectionnez deux nœuds pour créer un lien.</p>
-                    <div id="path-form">
+                    <div id="path-form" class="hidden">
                         <div class="form-group"><label>ID Chemin</label><input type="text" id="path-id" readonly></div>
                         <div class="form-group"><label>Type</label>
                             <select id="path-type">
@@ -81,8 +81,8 @@
                         </div>
                         <label><input type="checkbox" id="path-pmr"> Accessible PMR</label>
                         <br><br>
-                        <button class="btn-action btn-delete">Supprimer Chemin</button>
-                        <button class="btn-action btn-validate">Valider</button>
+                        <button class="btn-action btn-delete" onclick="deleteCurrentPath()">Supprimer Chemin</button>
+                        <button class="btn-action btn-validate" onclick="validatePath()">Valider</button>
                     </div>
                 </div>
             </div>
