Panel Admin - Implémentation du système de sauvegarde (Export) et chargement (Import) JSON (index.html, script.js)

--- a/admin/index.html
+++ b/admin/index.html
@@ -85,8 +85,9 @@
             </div>
 
             <div id="actions">
-                <button class="btn-action btn-save">Sauvegarder</button>
-                <button class="btn-action btn-import">Importer</button>
+                <button class="btn-action btn-save" onclick="exportGraph()">Sauvegarder</button>
+                <button class="btn-action btn-import" onclick="triggerImport()">Importer</button>
+                <input type="file" id="import-file" style="display:none" accept=".json" onchange="importGraph(event)">
             </div>
         </div>
 
