Panel Admin - Affichage des noms de salles dans l'édition des chemins (index.html, script.js)

--- a/admin/index.html
+++ b/admin/index.html
@@ -76,6 +76,14 @@
                                 <input type="text" id="path-dist-manual" placeholder="Override">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label>Nœud de départ (A)</label>
+                            <input type="text" id="path-node-a" disabled style="background:#eee;">
+                        </div>
+                        <div class="form-group">
+                            <label>Nœud d'arrivée (B)</label>
+                            <input type="text" id="path-node-b" disabled style="background:#eee;">
+                        </div>
                         <label><input type="checkbox" id="path-pmr"> Accessible PMR</label>
                         <br><br>
                         <button class="btn-action btn-delete" onclick="deleteCurrentPath()">Supprimer Chemin</button>
