Panel Admin - Amélioration de l'UI pour les inputs des ID des chemins et noeuds (index.html)

--- a/admin/index.html
+++ b/admin/index.html
@@ -41,7 +41,7 @@
 
                 <div id="panel-node" class="hidden">
                     <h3>Édition Nœud</h3>
-                    <div class="form-group"><label>ID</label><input type="text" id="node-id" readonly></div>
+                    <div class="form-group"><label>ID</label><input type="text" id="node-id" disabled style="background:#eee;"></div>
                     <div class="form-group"><label>Nom / Numéro</label><input type="text" id="node-name"></div>
                     <div class="form-group">
                         <label>Type</label>
@@ -61,7 +61,7 @@
                     <h3>Édition Chemin</h3>
                     <p>Sélectionnez deux nœuds pour créer un lien.</p>
                     <div id="path-form" class="hidden">
-                        <div class="form-group"><label>ID Chemin</label><input type="text" id="path-id" readonly></div>
+                        <div class="form-group"><label>ID Chemin</label><input type="text" id="path-id" disabled style="background:#eee;"></div>
                         <div class="form-group"><label>Type</label>
                             <select id="path-type">
                                 <option value="indoor">Intérieur</option>
