Panel Admin - Indiquation de la métrique des distances du formulaire des chemins dans le label (index.html, ui.js)

--- a/admin/index.html
+++ b/admin/index.html
@@ -69,7 +69,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label>Distance</label>
+                            <label>Distance (m)</label>
                             <div style="display:flex; gap:5px;">
                                 <input type="text" id="path-dist-auto" disabled style="background:#eee;">
                                 <input type="text" id="path-dist-manual" placeholder="Override">
