--- a/admin/index.html
+++ b/admin/index.html
@@ -53,7 +53,7 @@
                             <option value="wc">Toilettes</option>
                         </select>
                     </div>
-                    <div class="form-group"><label>Coordonnées</label><input type="text" id="node-coords" readonly></div>
+                    <div class="form-group"><label>Coordonnées</label><input type="text" id="node-coords"></div>
                     <button class="btn-action btn-delete" id="btn-del-node">Supprimer ce nœud</button>
                 </div>
 
