Panel Admin - Ajout de la navigation vers l'édition d'un nœud via un clic direct sur les inputs de départ/arrivée du formulaire de chemin (index.html, main.js)

--- a/admin/index.html
+++ b/admin/index.html
@@ -77,11 +77,11 @@
                         </div>
                         <div class="form-group">
                             <label>Nœud de départ (A)</label>
-                            <input type="text" id="path-node-a" disabled style="background:#eee;">
+                            <input type="text" id="path-node-a" readonly style="background:#eee; cursor:pointer;" title="Aller à ce nœud">
                         </div>
                         <div class="form-group">
                             <label>Nœud d'arrivée (B)</label>
-                            <input type="text" id="path-node-b" disabled style="background:#eee;">
+                            <input type="text" id="path-node-b" readonly style="background:#eee; cursor:pointer;" title="Aller à ce nœud">
                         </div>
                         <label><input type="checkbox" id="path-pmr"> Accessible PMR</label>
                         <br><br>
